--- a/sass/mob-version/_team.scss
+++ b/sass/mob-version/_team.scss
@@ -1,14 +1,7 @@
 .team {
   background-color: var(--buutom-bac);
 }
-.team__container {
-  padding: 94px 0;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
+
 .team__slogan {
   margin-bottom: 50px;
   text-align: center;
@@ -92,7 +85,12 @@
   overflow: hidden;
   background-color: var(--white-text);
 }
-
+// .team__card-tumb {
+//   @media screen and (max-width: 768px) {
+//     width: 450px;
+//     // width: 354px;
+//   }
+// }
 .team__card-content {
   text-align: center;
   padding: 30px 32px;
