--- a/css/main.css
+++ b/css/main.css
@@ -1150,12 +1150,20 @@ a {
 .client-card__item {
   -ms-flex-preferred-size: calc((100% - 30px) / 2);
       flex-basis: calc((100% - 30px) / 2);
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .client-card__item {
     -ms-flex-preferred-size: calc((100% - 30px) / 3);
         flex-basis: calc((100% - 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-card__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 6);
+        flex-basis: calc((100% - 30px) / 6);
   }
 }
 
@@ -1184,5 +1192,153 @@ a {
 .client-card__svg:hover {
   border-color: var(--blue-text);
   fill: var(--blue-text);
+}
+
+.footer {
+  background-color: var(--dark-grey-bac);
+}
+
+.footer__containers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 60px 0;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer__containers {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.footer__address {
+  margin-right: 70px;
+}
+
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.footer__map {
+  display: inline-block;
+  margin-bottom: 9px;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--white-text);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  line-height: 1.71;
+}
+
+.footer__link-address {
+  display: inline-block;
+  margin-bottom: 9px;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--grey-text-op60);
+  letter-spacing: 0.03em;
+  line-height: 1.71;
+}
+
+.footer__address {
+  font-style: normal;
+}
+
+.footer-join__title {
+  color: var(--white-text);
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  line-height: 1.16;
+}
+
+.footer-join__containers {
+  width: 206px;
+}
+
+/* ---------Подписка---------- */
+.subscription {
+  margin-left: 50px;
+}
+
+.subscription__title {
+  color: #ffffff;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.subscription__imput {
+  width: 348px;
+  margin-top: 20px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: transparent;
+  padding: 15px;
+}
+
+.subscription__imput::-webkit-input-placeholder {
+  font-family: "roboto";
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.subscription__imput:-ms-input-placeholder {
+  font-family: "roboto";
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.subscription__imput::-ms-input-placeholder {
+  font-family: "roboto";
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.subscription__imput::placeholder {
+  font-family: "roboto";
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.subscription__button {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 12px;
+  border: 0;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: var(--blue-text);
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  padding: 6px 0 10px 29px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscription__svg {
+  margin-right: 28px;
+  margin-left: 10px;
+  -webkit-transform: translateY(7px);
+          transform: translateY(7px);
 }
 /*# sourceMappingURL=main.css.map */
