--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -2,10 +2,10 @@
 @import "base";
 @import "special";
 @import "../mob-version/header";
-// @import "../mob-version/mobile-menu";
 @import "../mob-version/hero";
 @import "../mob-version/modal";
 @import "../mob-version/approach";
 @import "../mob-version/what-we-do";
 @import "../mob-version/team";
 @import "../mob-version/clients";
+@import "../mob-version/footer";
