--- a/sass/mob-version/_clients.scss
+++ b/sass/mob-version/_clients.scss
@@ -25,8 +25,12 @@
 }
 .client-card__item {
   flex-basis: calc((100% - 30px) / 2);
+  margin-bottom: 30px;
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 30px) / 6);
   }
 }
 
