--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -8,5 +8,5 @@
 @import "../mob-version/what-we-do";
 @import "../mob-version/team";
 @import "../mob-version/clients";
-// @import "../mob-version/footer";
+@import "../mob-version/footer";
 // @import "../mob-version/portfolio";
