--- a/sass/mob-version/_team.scss
+++ b/sass/mob-version/_team.scss
@@ -1,7 +1,9 @@
 .team {
   background-color: var(--buutom-bac);
 }
-
+.team__container {
+  padding: 94px 15px;
+}
 .team__slogan {
   margin-bottom: 50px;
   text-align: center;
@@ -66,6 +68,9 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 
   display: flex;
   flex-wrap: wrap;
@@ -85,13 +90,50 @@
   overflow: hidden;
   background-color: var(--white-text);
 }
-// .team__card-tumb {
-//   @media screen and (max-width: 768px) {
-//     width: 450px;
-//     // width: 354px;
-//   }
-// }
+.team__item {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.team__card-tumb {
+  object-fit: cover;
+  max-width: 450px;
+  max-height: 460px;
+  position: relative;
+}
+
+@media (min-width: 480px) {
+  .team__card-tumb {
+    height: 460px;
+    width: 450px;
+  }
+}
+
+@media (min-width: 768px) {
+  .team__card-tumb {
+    height: 374px;
+    width: 354px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .team__card-tumb {
+    height: 260px;
+    width: 270px;
+  }
+}
+.team__photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .team__card-content {
   text-align: center;
   padding: 30px 32px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
