--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -9,4 +9,4 @@
 @import "../mob-version/team";
 @import "../mob-version/clients";
 @import "../mob-version/footer";
-// @import "../mob-version/portfolio";
+@import "../mob-version/portfolio";
