--- a/sass/mob-version/_footer.scss
+++ b/sass/mob-version/_footer.scss
@@ -17,11 +17,11 @@
   margin-right: 70px;
 }
 .footer__logo {
-  display: inline-block;
+  display: block;
   margin-bottom: 20px;
 }
 .footer__map {
-  display: inline-block;
+  display: block;
   margin-bottom: 9px;
   font-family: "roboto";
   font-size: 14px;
@@ -32,7 +32,7 @@
   line-height: 1.71;
 }
 .footer__link-address {
-  display: inline-block;
+  display: block;
   margin-bottom: 9px;
   font-family: "roboto";
   font-size: 14px;
