--- a/sass/mob-version/_portfolio.scss
+++ b/sass/mob-version/_portfolio.scss
@@ -1,39 +1,239 @@
-// .portfolio {
-//   padding: 94px 0;
+.portfolio {
+  padding-top: 60px;
+  padding-bottom: 60px;
 
-//   &__container {
-//     max-width: 1200px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     padding-left: 15px;
-//     padding-right: 15px;
-//   }
-//   &__button-list {
-//     display: flex;
-//     text-align: center;
-//     justify-content: center;
-//     padding-bottom: 34px;
-//   }
-//   &__button {
-//     padding: 6px 22px;
-//     margin-right: 8px;
-//     background-color: var(--buutom-bac);
-//     border: 0;
-//     border-radius: 4px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
-//     color: var(--black-text);
-//     font-family: "roboto";
-//     font-weight: 500;
-//     font-size: 16px;
-//     letter-spacing: 0.03em;
-//     line-height: 1.62;
-//     &:hover,
-//     &:focus {
-//       color: var(--white-text);
-//       background-color: var(--blue-text);
-//       border: 0;
-//       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-//         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-//     }
-//   }
-// }
+.portfolio__container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  min-width: 320px;
+
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
+.portfolio__button-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+}
+
+.portfolio__buttons-set {
+  margin-bottom: 40px - 15px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px - 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px - 15px;
+  }
+}
+
+.portfolio__button {
+  margin-right: 8px;
+  margin-bottom: 15px;
+  padding: 6px 22px;
+
+  color: #212121;
+  background-color: #f5f4fa;
+
+  font-family: Roboto;
+  font-style: normal;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  letter-spacing: 0.03em;
+  border: none;
+  border-radius: 4px;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--white-text);
+    background-color: var(--blue-text);
+    border: 0;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+
+  @media screen and (max-width: 768px - 1px) {
+    margin-bottom: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
+}
+
+.card-set {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
+
+.card-set__item {
+  width: 100%;
+  margin-left: auto;
+  margin-top: auto;
+  background-color: #fff;
+
+  @media screen and (max-width: 768px - 1px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    // flex-basis: calc(100% / 3 - 30px);
+    flex-basis: calc((100% - 90px) / 3);
+  }
+}
+
+.card-set__link {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+
+  &:hover .card-set__overlay {
+    transform: translateX(0);
+  }
+
+  &:focus .card-set__overlay {
+    transform: translateX(0);
+  }
+}
+
+.card-set__thumb {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+
+  height: 294px;
+}
+
+.card-set__img {
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+}
+
+.card-set__overlay {
+  position: absolute;
+  transform: translateY(100%);
+  top: 1px;
+  left: 1px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-set__text {
+  width: 100%;
+  padding: 40px 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  color: #fff;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+
+  @media screen and (min-width: 480px) {
+    padding: 77px 24px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
+}
+
+.card-set__content {
+  flex-grow: 1;
+
+  padding: 20px 24px;
+
+  border-bottom: 1px solid #eee;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+}
+
+.card-set__project-name {
+  margin-bottom: 4px;
+
+  color: #212121;
+
+  font-family: Roboto;
+  font-style: normal;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.card-set__signature {
+  color: #757575;
+
+  font-family: Roboto;
+  font-style: normal;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+}
