--- a/sass/mob-version/_footer.scss
+++ b/sass/mob-version/_footer.scss
@@ -13,12 +13,14 @@
   padding-right: 15px;
   @media screen and (min-width: 1200px) {
     display: flex;
-    align-items: center;
+
+    // padding-right: 89px;
+    // padding-left: 76px;
   }
 }
-.footer__address {
-  // margin-right: 70px;
-}
+// .footer__address {
+//   // margin-right: 70px;
+// }
 .footer__logo {
   display: block;
   margin-bottom: 20px;
@@ -67,7 +69,7 @@
 }
 /* ---------Подписка---------- */
 .subscription {
-  margin-left: 50px;
+  // margin-left: 50px;
 }
 @media screen and (max-width: 1200px) {
   .subscription {
