--- a/css/main.css
+++ b/css/main.css
@@ -1112,9 +1112,9 @@ a:visited {
 .team__card-tumb {
   -o-object-fit: cover;
      object-fit: cover;
-  max-width: 450px;
-  max-height: 460px;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (min-width: 480px) {
@@ -1297,6 +1297,8 @@ a:visited {
 
 .footer__address {
   font-style: normal;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-join__title {
@@ -1312,6 +1314,8 @@ a:visited {
 
 .footer-join__containers {
   width: 206px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1321,6 +1325,11 @@ a:visited {
 }
 
 /* ---------Подписка---------- */
+.subscription {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media screen and (max-width: 1200px) {
   .subscription {
     margin-top: 60px;
