--- a/sass/mob-version/_approach.scss
+++ b/sass/mob-version/_approach.scss
@@ -8,9 +8,11 @@
 }
 
 .approach-card__list {
+  display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
+  justify-content: space-between;
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -33,7 +35,7 @@
     width: 354px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1199px) {
     width: 270px;
   }
 }
@@ -53,7 +55,7 @@
     width: 354px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1199px) {
     width: 270px;
   }
 }
