--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -6,7 +6,7 @@
 @import "../mob-version/modal";
 @import "../mob-version/approach";
 @import "../mob-version/what-we-do";
-@import "../mob-version/team";
-@import "../mob-version/clients";
-@import "../mob-version/footer";
-@import "../mob-version/portfolio";
+// @import "../mob-version/team";
+// @import "../mob-version/clients";
+// @import "../mob-version/footer";
+// @import "../mob-version/portfolio";
