--- a/sass/mob-version/_header.scss
+++ b/sass/mob-version/_header.scss
@@ -30,53 +30,56 @@
     display: none;
   }
 }
+
 .contacts {
   justify-content: space-around;
   align-items: center;
 
   display: flex;
 }
-@media screen and (max-width: 768px) {
-  .contacts {
-    display: none;
-  }
-  .contacts__Information:hover {
-    color: var(--blue-text);
-    transition: color 250ms var(--cubic);
-  }
-  .contacts__Information--mail-color {
-    font-family: "roboto";
-    font-size: 24px;
-    font-weight: 500;
-    color: var(--grey-text);
-    letter-spacing: 0.02em;
-    justify-content: center;
-    align-items: center;
-  }
+// @media screen and (max-width: 768px) {
+//   .contacts {
+//     display: none;
+//   }
+// }
+
+.contacts__Information:hover {
+  color: var(--blue-text);
+  transition: color 250ms var(--cubic);
+}
+.contacts__Information--mail-color {
+  font-family: "roboto";
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--grey-text);
+  letter-spacing: 0.02em;
+  justify-content: center;
+  align-items: center;
+}
+.contacts__Information {
+  display: flex;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--grey-text);
+  letter-spacing: 0.02em;
+  justify-content: center;
+  align-items: center;
+  margin-top: 270px;
+}
+@media screen and (max-width: 1199px) {
   .contacts__Information {
-    display: flex;
-    font-family: "roboto";
-    font-size: 14px;
-    font-weight: 500;
-    color: var(--grey-text);
-    letter-spacing: 0.02em;
-    justify-content: center;
-    align-items: center;
-    margin-top: 270px;
-  }
-  @media screen and (max-width: 1199px) {
-    .contacts__Information {
-      font-size: 34px;
-      justify-content: left;
-      color: var(--blue-text);
-      padding-bottom: 32px;
-    }
-  }
-  .contacts__svg {
-    margin-right: 10px;
-    fill: currentColor;
+    font-size: 34px;
+    justify-content: left;
+    color: var(--blue-text);
+    padding-bottom: 32px;
   }
 }
+.contacts__svg {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
 .nav__logo--web {
   font-family: "Raleway";
   font-style: normal;
