--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -1,12 +1,12 @@
-@import "variables";
-@import "base";
-@import "special";
-@import "../mob-version/header";
-@import "../mob-version/hero";
-@import "../mob-version/modal";
-@import "../mob-version/approach";
-@import "../mob-version/what-we-do";
-// @import "../mob-version/team";
-// @import "../mob-version/clients";
-// @import "../mob-version/footer";
-// @import "../mob-version/portfolio";
+@import "./base";
+@import "./special";
+@import "./variables";
+@import "./header";
+@import "./hero";
+@import "./modal";
+@import "./approach";
+@import "./what-we-do";
+@import "./team";
+@import "./clients";
+@import "./portfolio";
+@import "./footer";
