--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,7 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: 30px;
 }
 
 @media screen and (max-width: 1199px) {
