--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -62,6 +62,7 @@
   letter-spacing: 0.02em;
   justify-content: center;
   align-items: center;
+  margin-left: 30px;
 }
 @media screen and (max-width: 1199px) {
   .contacts__Information {
