--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,7 @@ li {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-bottom: 10px;
   }
 }
 
