--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -39,6 +39,7 @@
   .contacts {
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
   }
 }
 @media screen and (max-width: 767px) {
