--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,17 @@ li {
   margin-left: 30px;
 }
 
+@media screen and (max-width: 767px) {
+  .contacts__Information {
+    font-size: 34px;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    color: var(--blue-text);
+    padding-bottom: 32px;
+  }
+}
+
 .contacts__svg {
   margin-right: 10px;
   fill: currentColor;
@@ -1637,6 +1648,8 @@ li {
   font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .subscription__imput {
