--- a/css/main.css
+++ b/css/main.css
@@ -1211,25 +1211,28 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .client-card__item {
-  -ms-flex-preferred-size: calc((100% - 30px) / 2);
-      flex-basis: calc((100% - 30px) / 2);
+  -ms-flex-preferred-size: calc((100% - 30px) / 3);
+      flex-basis: calc((100% - 30px) / 3);
   margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .client-card__item {
-    -ms-flex-preferred-size: calc((100% - 30px) / 3);
-        flex-basis: calc((100% - 30px) / 3);
+    -ms-flex-preferred-size: calc((100% - 30px) / 4);
+        flex-basis: calc((100% - 30px) / 4);
   }
 }
 
 @media screen and (min-width: 1199px) {
   .client-card__item {
-    -ms-flex-preferred-size: calc((100% - 30px) / 6);
-        flex-basis: calc((100% - 30px) / 6);
+    -ms-flex-preferred-size: calc((100% - 30px) / 7);
+        flex-basis: calc((100% - 30px) / 7);
   }
 }
 
@@ -1239,7 +1242,7 @@ li {
 }
 
 .client-card__svg {
-  width: 170px;
+  width: 100%;
   height: 90px;
   border-radius: 4px;
   border: 2px solid currentColor;
@@ -1648,8 +1651,6 @@ li {
   font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .subscription__imput {
