--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -22,15 +22,18 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .client-card__item {
-  flex-basis: calc((100% - 30px) / 2);
+  flex-basis: calc((100% - 30px) / 3);
   margin-bottom: 30px;
+  margin-right: 30px;
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 30px) / 3);
+    flex-basis: calc((100% - 30px) / 4);
   }
   @media screen and (min-width: 1199px) {
-    flex-basis: calc((100% - 30px) / 6);
+    flex-basis: calc((100% - 30px) / 7);
   }
 }
 
@@ -39,7 +42,7 @@
   background-color: transparent;
 }
 .client-card__svg {
-  width: 170px;
+  width: 100%;
   height: 90px;
   border-radius: 4px;
   border: 2px solid currentColor;
