--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,7 @@ li {
 
 @media (min-width: 768px) {
   .nav__page {
-    margin: 32px 50px 32px 0;
+    margin: 0px 50px 0px 0;
   }
 }
 
@@ -303,6 +303,8 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-bottom: 16px;
   margin-top: 64px;
 }
