--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -152,7 +152,7 @@
 }
 @media (min-width: 768px) {
   .nav__page {
-    margin: 32px 50px 32px 0;
+    margin: 0px 50px 0px 0;
   }
 }
 
@@ -172,6 +172,7 @@
 }
 .mobile-menu__social {
   display: flex;
+  flex-wrap: wrap;
   padding-bottom: 16px;
   margin-top: 64px;
 }
