--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -24,6 +24,7 @@ body {
   margin-left: auto;
   max-width: 1600px;
   background-color: var(--white-text);
+  margin: 0;
 }
 a {
   text-decoration: none;
