--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body {
   margin-left: auto;
   max-width: 1600px;
   background-color: var(--white-text);
+  margin: 0;
 }
 
 a {
@@ -128,6 +129,7 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 32px 0;
 }
 
 @media screen and (max-width: 1199px) {
@@ -139,7 +141,7 @@ li {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-bottom: 10px;
+    padding: 13px 0;
   }
 }
 
@@ -195,6 +197,7 @@ li {
             justify-content: left;
     color: var(--blue-text);
     padding-bottom: 32px;
+    margin-left: 0px;
   }
 }
 
@@ -275,6 +278,7 @@ li {
   .nav__page {
     font-size: 40px;
     font-weight: 500;
+    padding-top: 16px;
   }
 }
 
