--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -34,12 +34,14 @@
   align-items: center;
 
   display: flex;
+  padding: 32px 0;
 }
 @media screen and (max-width: 1199px) {
   .contacts {
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
+    padding: 13px 0;
   }
 }
 @media screen and (max-width: 767px) {
@@ -77,6 +79,7 @@
     justify-content: left;
     color: var(--blue-text);
     padding-bottom: 32px;
+    margin-left: 0px;
   }
 }
 .contacts__svg {
@@ -142,12 +145,12 @@
   font-weight: 500;
   color: var(--black-text);
   letter-spacing: 0.02em;
-  // padding-top: 16px;
 }
 @media screen and (max-width: 768px) {
   .nav__page {
     font-size: 40px;
     font-weight: 500;
+    padding-top: 16px;
   }
 }
 @media (min-width: 768px) {
