--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -132,7 +132,7 @@
   border-radius: 2px;
   position: absolute;
   bottom: -1px;
-  transform: rotateX(20px);
+  transform: translateY(33px);
 }
 @media screen and (max-width: 768px) {
   .nav__page--active .nav__page::after {
